--- a/templates/home.html
+++ b/templates/home.html
@@ -214,7 +214,7 @@
                 <!--First columnn-->
 
                 <!--Second columnn-->
-                <div class="col-lg-3">
+                <div class="col-lg-3" style="padding: 0px; margin: 0px;">
                     <!--Card-->
                     <div class="card wow fadeInUp" data-wow-delay="0.2s">
 
