--- a/templates/calorie.html
+++ b/templates/calorie.html
@@ -102,7 +102,7 @@
                 <!--Links-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/home">Home <span class="sr-only"></span></a>
                     </li>
                     {% if session.user %}
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
