--- a/templates/home.html
+++ b/templates/home.html
@@ -101,8 +101,8 @@
                 <a class="navbar-brand" href="http://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">GuacTime</a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
                     </li>
                     {% if session.user %}
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
