--- a/templates/authenticate.html
+++ b/templates/authenticate.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GuacitUp</title>
+    <title>Login/Register</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -98,7 +98,7 @@
             <!--Collapse content-->
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
                 <!--Navbar Brand-->
-                <a class="navbar-brand" href="" target="_blank">GuacTime</a>
+                <a class="navbar-brand">Safe<sup>2</sup></a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -107,9 +107,7 @@
                     {% if session.user %}
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
                     {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/home/#abouto">Featured</a>
-                    </li>
+
                     <form class="form-inline"  action="/display/" method="post">
                     <input class="form-control" name="lookup" type="text" placeholder="Search">
 
@@ -164,7 +162,7 @@
           <input class="form-control" type="password" name="password" placeholder="Password">
           <br>
           <br><br>
-          <input class="btn btn-primary" type="submit" name="login" value="login" required="true">
+          <input class="btn btn-primary" type="submit" name="login" value="Login" required="true">
         </form>
       </div>
 
@@ -205,12 +203,13 @@
 	  <br>
           Biologically, you're:
           <div class="radio">
+	    <br>
             <label><input type="radio" name="gender" value="m" required="true">Male</label>
           </div><div class="radio">
             <label><input type="radio" name="gender" value="f">Female</label>
           </div>
           <br>
-          <input class="btn btn-primary" type="submit" name="register" value="register" required="true">
+          <input class="btn btn-primary" type="submit" name="register" value="Register" required="true">
         </form>
       </div>
 
