--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GuacitUp</title>
+    <title>Home</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -64,7 +64,7 @@
         }
 
         .view {
-            background: url("https://honestchops.com/wp-content/uploads/2014/05/DSC_0099.jpg")
+            background: url("http://mylatinatable.com/wp-content/uploads/2016/02/guacamole-foto-heroe.jpg")
             no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -98,7 +98,7 @@
             <!--Collapse content-->
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
                 <!--Navbar Brand-->
-                <a class="navbar-brand" href="http://mdbootstrap.com/material-design-for-bootstrap/" target="_blank">GuacTime</a>
+                <a class="navbar-brand">Safe<sup>2</sup></a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -107,15 +107,18 @@
                     {% if session.user %}
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
                     {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/home/#abouto">Featured</a>
-                    </li>
                     <form class="form-inline"  action="/display/" method="post">
                     <input class="form-control" name="lookup" type="text" placeholder="Search">
 
                     <button class="nav-link nav-item btn btn-primary btn-sm fadeInDown"  style="display: none;" type="submit" name="search" value="search"></button>
                 </form>
-                {% if session.user %}
+                    {% if session.user %}
+		    <li class="nav-item">
+                        <a class="nav-link" href="/calorie">Calories</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link" href="/update">Update</a>
+                    </li>
                     <li class="nav-item">
                     <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
                     </li>
@@ -170,143 +173,10 @@
         <!--Section: About-->
         <section id="about" class="text-xs-center wow bounceIn" data-wow-delay="0.2s">
 
-            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website and mobile apps that make calorie counting and food tracking easy. </p>
+            <p>We believe — and medical studies prove — that the best way to lose weight and keep it off is to simply keep track of the foods you eat. Gimmicky machines and fad diets don't work, so we designed a free website that makes calorie counting and food tracking easy. </p>
 
         </section>
         <!--Section: About-->
-
-        <div class="divider-new">
-            <h2 class="h2-responsive wow fadeInDown">Best features</h2>
-        </div>
-
-        <!--Section: Best features-->
-        <section id="best-features">
-
-            <div class="row">
-
-                <!--First columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://cdn.themediterraneandish.com/wp-content/uploads/2014/06/Beef-Shish-Kabob-Recipe-10.jpg" class="img-fluid" style="width: 100vw;" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Shish Kabob</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">A dish consisting of pieces of seasoned meat and sometimes vegetables roasted on skewers and served with condiments.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--First columnn-->
-
-                <!--Second columnn-->
-                <div class="col-lg-3" style="padding: 0px; margin: 0px;">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.2s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://a.hilanddairy.envoydev.com/sites/default/files/recipe_fried_chicken.jpg" style="width: 100vw;" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Buttermilk Fried Chicken</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">Chicken pieces floured or battered and then dipped in buttermilk before being pan-fried, deep fried, or pressure fried. The breading and coating adds a crisp coating or crust and added flavor to the exterior.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--Second columnn-->
-
-                <!--Third columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.4s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="https://s-media-cache-ak0.pinimg.com/736x/26/0f/49/260f49edb64b3f858d77659c4ba72388.jpg" style="width: 100vw;" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Steak Tacos</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">A Mexican dish consisting of a fried tortilla, typically folded, filled with various mixtures, such as seasoned meat, beans, lettuce, and tomatoes.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--Third columnn-->
-
-                <!--First columnn-->
-                <div class="col-lg-3">
-                    <!--Card-->
-                    <div class="card wow fadeInUp" data-wow-delay="0.6s">
-
-                        <!--Card image-->
-                        <div class="view overlay hm-white-slight">
-                            <img src="http://images.shape.mdpcdn.com/sites/shape.com/files/styles/slide/public/healthy-chinese-food_0.jpg" style="width: 100vw;" class="img-fluid" alt="">
-                            <a>
-                                <div class="mask"></div>
-                            </a>
-                        </div>
-                        <!--/.Card image-->
-
-                        <!--Card content-->
-                        <div class="card-block text-xs-center">
-                            <!--Title-->
-                            <h4 class="card-title">Stir-Fry Noodles</h4>
-                            <hr>
-                            <!--Text-->
-                            <p class="card-text">Vegetables and meat cooked in a small amount of very hot oil while being stirred in a wok.</p>
-                        </div>
-                        <!--/.Card content-->
-
-                    </div>
-                    <!--/.Card-->
-                </div>
-                <!--First columnn-->
-            </div>
-
-        </section>
-        <!--/Section: Best features-->
-
-        <div class="divider-new">
-            <h2 class="h2-responsive wow fadeInUp">Contact us</h2>
-        </div>
 
 
     </div>
@@ -324,7 +194,7 @@
 
         <div class="footer-copyright">
             <div class="container-fluid">
-                © 2015 Copyright: Team Guac
+                © 2015 Copyright: Team Curly-Guacamole
 
             </div>
         </div>
