--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GuacitUp</title>
+    <title>Profile</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -98,7 +98,7 @@
             <!--Collapse content-->
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
                 <!--Navbar Brand-->
-                <a class="navbar-brand" href="" target="_blank">GuacTime</a>
+                <a class="navbar-brand">Safe<sup>2</sup></a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -108,7 +108,10 @@
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/home/#abouto">Featured</a>
+                        <a class="nav-link" href="/calorie">Calories</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link" href="/update">Update</a>
                     </li>
                     <form class="form-inline"  action="/display/" method="post">
                     <input class="form-control" name="lookup" type="text" placeholder="Search">
@@ -150,12 +153,6 @@
 
   <div class="container" style="padding-top: 100px; display: inline-block;"> 
     {% block content %}
-    <!-- tabs -->
-    <ul class="nav nav-tabs tabs-3" >
-      <li role="presentation" class="active"><a href="/profile">Profile</a></li><li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
-      <li role="presentation"><a href="/update">Update Information</a></li>
-    </ul>
-    <br>
 
     <h3>Basic information</h3><hr>
     Gender: {{gender}}<br>
