--- a/templates/update.html
+++ b/templates/update.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GuacitUp</title>
+    <title>Update Information</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -98,7 +98,7 @@
             <!--Collapse content-->
             <div class="collapse navbar-toggleable-xs" id="collapseEx">
                 <!--Navbar Brand-->
-                <a class="navbar-brand" href="" target="_blank">GuacTime</a>
+                <a class="navbar-brand">Safe<sup>2</sup></a>
                 <!--Links-->
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
@@ -107,15 +107,18 @@
                     {% if session.user %}
                     <li class="nav-item"><a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a></li>
                     {% endif %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/home/#abouto">Featured</a>
-                    </li>
                     <form class="form-inline"  action="/display/" method="post">
                     <input class="form-control" name="lookup" type="text" placeholder="Search">
 
                     <button class="nav-link nav-item btn btn-primary btn-sm fadeInDown"  style="display: none;" type="submit" name="search" value="search"></button>
                 </form>
-                {% if session.user %}
+                    {% if session.user %}
+		    <li class="nav-item">
+                        <a class="nav-link" href="/calorie">Calories</a>
+                    </li>
+		    <li class="nav-item">
+                        <a class="nav-link" href="/update">Update</a>
+                    </li>
                     <li class="nav-item">
                     <a href="/profile" style="color: #2BBBAD;" class="nav-link">Signed in as {{session.user}}</a>
                     </li>
@@ -152,22 +155,25 @@
     
     {% block content %}
     {% if update %}
+    {% if color %}
+    <div class="alert alert-danger" role="alert">
+      <span class="sr-only">Update:</span>
+      {{update}}
+    </div>
+    {% else %}
         <div class="alert alert-success" role="alert">
           <span class="sr-only">Update:</span>
             {{ update }}
         </div>
+	{% endif %}
     {% endif %}
-      <ul class="nav nav-tabs">
-        <li role="presentation"><a href="/profile">Profile</a></li>
-        <li role="presentation"><a href="/calorie">Calorie Tracker</a></li>
-        <li role="presentation" class="active"><a href="/update">Update Information</a></li>
       </ul><br>
       <form action="/update/" method="post">
         <h5>Update Age:</h5><input class="form-control" type="number" name="age" placeholder="Age">
         <h5>Update Height:</h5><input class="form-control" type="number" name="height" placeholder="Height">
         <h5>Update Weight:</h5><input class="form-control" type="number" name="weight" placeholder="Weight">
         <br/>
-        <input class="btn btn-primary" type="submit" name="update" value="update">
+        <input class="btn btn-primary" type="submit" name="update" value="Update">
       </form>
     {% endblock %}
     </body>
